gui: adapt for CMake

--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -21,7 +21,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="image.qrc">
-    <normaloff>:/img/ckb-logo.png</normaloff>:/img/ckb-logo.png</iconset>
+    <normaloff>:/img/ckb-next-logo.png</normaloff>:/img/ckb-next-logo.png</iconset>
   </property>
   <property name="unifiedTitleAndToolBarOnMac">
    <bool>true</bool>
